docs: upgrade java guide to senior level / interview perspective (5-10 yoe) with deep technical insights